--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@ max-width: 500px;
   $("h5").css("color","black")
   $("h1").css("color","red")
  })
- 
+ $("#reset").click(function name() {
+  alert("hello")
+  $("body").css("background-color","black")
+  $("h5").css("color","black")
+  $("h1").css("color","red")
+ }) 
 </script>
 </body>
 
