--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ max-width: 500px;
 <h1> Welcome to my Github page          </h1>
 <h5>        Don't like this mode? click here to choose another</h5>
 <button id = "lightmode"> Light mode   </button>
-<button type = "reset"> Dark mode   </button>
+<button id = "reset"> Dark mode   </button>
 
    <h5>    How quickly can you react?    
         
