--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ max-width: 500px;
       <a class="nav-link" href="#mdo">contact me</a>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Reaction tester Game</a>
+      <a class="nav-link dropdown-toggle"  href="#" role="button" aria-haspopup="true" aria-expanded="false">Reaction tester Game</a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#one">one</a>
         <a class="dropdown-item" href="#two">two</a>
