--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ max-width: 500px;
   <a class="navbar-brand" href="#"></a>
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a class="nav-link" href="#fat">Top bar</a>
+      <a class="nav-link" href="#fat">Top bars</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#mdo">contact me</a>
