--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ max-width: 500px;
   alert("hello")
   $("body").css("background-color","black")
   $("h5").css("color","black")
-  $("h1").css("color","red")
+  $("h1").css("color","black")
  }) 
 </script>
 </body>
