--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@ max-width: 500px;
   alert("hello")
   $("body").css("background-color","white")
   $("h5").css("color","black")
-  $("h1").css("color","red")
+  $("h1").css("color","black")
  })
  $("#reset").click(function name() {
   alert("hello")
   $("body").css("background-color","black")
   $("h5").css("color","black")
-  $("h1").css("color","black")
+  $("h1").css("color","#800000")
  }) 
 </script>
 </body>
