--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ max-width: 500px;
  $("#reset").click(function name() {
   
   $("body").css("background-color","black")
-  $("h5").css("color","black")
+  $("h5").css("color","#FFFF00;")
   $("h1").css("color","#800000")
  }) 
 </script>
