--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ max-width: 500px;
 <div class="card" style="width: 18rem;">
  
  
-    <img class="card-img-top" src = "andrew-reshetov-Fmkj7qZ1JgI-unsplash.jpg" alt="Card image cap">
+    <img class="card-img-top" src = "IMAGES/IMG_6186.JPG" alt="Card image cap">
   
 
  
