--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ max-width: 500px;
      <li class="list-group-item">Kindly email me if you need a website built. <span id = "hearts"> &hearts; </span>  </li>  
      
 
-    <li class="list-group-item">Vestibulum at eros   </li>
+    <li class="list-group-item">Vestibulum at eros 1  </li>
 
   </ul>
 
