--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@ max-width: 500px;
         
         find out when you play this cool reaction tester game</h5></center>
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 14rem;">
  
  
-    <img class="card-img-top" src = "IMG_6186.JPG" alt="Card image cap">
+    <img class="card-img-top" src = "my face.png" alt="Card image cap">
   
 
  
-  <div class="card-body">
+  <div class="card-body" style="height:5rem ;">
    
    
     <h4 class="card-title">About me</h4>
@@ -112,11 +112,12 @@ max-width: 500px;
      <li class="list-group-item">Kindly email me if you need a website built. <span id = "hearts"> &hearts; </span>  </li>  
      
 
-    <li class="list-group-item">Vestibulum at eros 1  </li>
+    <li class="list-group-item">Vestibulum at eros   </li>
 
   </ul>
 
 </div>
+
 
 <script type = "text/javascript">  
  $("#lightmode").click(function name() {
