--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ max-width: 500px;
 </head>
 <body>
   <nav id="navbar-example2" class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
+  <a class="navbar-brand" href="#home"></a>
   <ul class="nav nav-pills">
     <li class="nav-item">
       <a class="nav-link" href="#fat">Top bars</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#mdo">contact me</a>
+      <a class="nav-link" href=",card">contact me</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle"  href="#" role="button" aria-haspopup="true" aria-expanded="false">Reaction tester Game</a>
@@ -66,16 +66,16 @@ max-width: 500px;
 </nav>
   
   <center>
-<h1> Welcome to my Github page          </h1>
-<h5>        Don't like this mode? click here to choose another</h5>
+<h1 id = "home"> Welcome to my Github page          </h1>
+<h5>        Like it lighter or darker? click here </h5>
 <button id = "lightmode"> Light mode   </button>
 <button id = "reset"> Dark mode   </button>
 
-   <h5>    How quickly can you react?    
+ <a href = "https://github.com/David-Asalu/CV/blob/main/reaction%20time%202.html">  <h5>    How quickly can you react?    
         
         find out when you play this cool reaction tester game</h5></center>
-
-<div class="card" style="width: 14rem;">
+</a>
+    <div class="card" style="width: 14rem;"> 
  
  
     <img class="card-img-top" src = "my face.png" alt="Card image cap">
