--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ max-width: 500px;
 <button id = "lightmode"> Light mode   </button>
 <button id = "reset"> Dark mode   </button>
 
- <a href = "https://github.com/David-Asalu/CV/blob/main/reaction%20time%202.html">  <h5>    How quickly can you react?    
+ <a href = "reaction time 2.html">  <h5>    How quickly can you react?    
         
         find out when you play this cool reaction tester game</h5></center>
 </a>
